tests/baselines/reference/stringLiteralsWithSwitchStatements02.errors.txt
stringLiteralsWithSwitchStatements02.ts(8,5): error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
stringLiteralsWithSwitchStatements02.ts(13,5): error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.


==== stringLiteralsWithSwitchStatements02.ts (2 errors) ====
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
    
    